--- a/page.css
+++ b/page.css
@@ -31,6 +31,7 @@ header ul li {
   display: inline-block;
   font-size: 24px;
   border-radius: 20px;
+  border: 1px solid blue;
 }
 
 header ul li a {
@@ -51,7 +52,7 @@ header ul li.active a {
 
 .home {
   top: 2%;
-  left: 20%;
+  left: 10%;
   font-weight: bolder;
   position: absolute;
   display: block;
@@ -84,7 +85,7 @@ main {
 
 .present {
   font-family: "Courier New", Courier, monospace;
-  color: aliceblue;
+  color: black;
   font-weight: bolder;
   height: 100%;
 }
@@ -115,10 +116,10 @@ main {
 
 footer {
   position: absolute;
-  top: 80%;
+  top: 85%;
   background-color: bisque;
   width: 100%;
-  height: 20%;
+  height: 15%;
   color: black;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -130,4 +131,3 @@ footer p {
   opacity: 0.5;
   font-size: 1rem;
 }
-
