--- a/page.css
+++ b/page.css
@@ -1,8 +1,8 @@
 body {
   background-attachment: scroll;
-  background-image: url("immagini/background.jpg");
+  background-image: url("immagini/imgprova.jpg");
   background-repeat: repeat-y;
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   background-size: cover;
   margin: 0%;
@@ -13,11 +13,14 @@ header {
   position: absolute;
   width: 100%;
   height: 10%;
-  top: 1%;
+  top: 0%;
+  background-color: #0005;
 }
 
 header img {
-  width: 8%;
+  width: 6%;
+  height: auto;
+
 }
 
 header ul {
