--- a/page.css
+++ b/page.css
@@ -1,10 +1,9 @@
 body {
-  background-attachment: scroll;
   background-image: url("immagini/imgprova.jpg");
-  background-repeat: repeat-y;
-  height: 100vh;
+  height: 100%;
   width: 100%;
-  background-size: cover;
+  position: absolute;
+  display: block;
   margin: 0%;
 }
 
@@ -20,7 +19,6 @@ header {
 header img {
   width: 6%;
   height: auto;
-
 }
 
 header ul {
@@ -120,10 +118,10 @@ main {
 footer {
   position: absolute;
   display: block;
-  top: 85%;
+  top: 83%;
   background-color: bisque;
   width: 100%;
-  height: 15%;
+  height: 17%;
   color: black;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
