--- a/styleInformazioni.css
+++ b/styleInformazioni.css
@@ -23,12 +23,11 @@ header {
   transform: translate(-50%, -50%);
   position: absolute;
   color: #1670f0;
-  padding: 15px 60px;
+  padding: 10px 40px;
   font-size: 10x;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  background: #0c002b;
-  
+  background: mistyrose;
 }
 
 .home a::before {
@@ -130,11 +129,11 @@ header {
   transform: translate(-50%, -50%);
   position: absolute;
   color: #1670f0;
-  padding: 10px 30px;
+  padding: 10px 10px;
   font-size: 10x;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  background: #0c002b;
+  background: mistyrose;
 }
 
 .download a::before {
