--- a/page.css
+++ b/page.css
@@ -104,7 +104,7 @@ main {
   position: absolute;
   top: 55%;
   width: 100%;
-  font-size: 2rem;
+  font-size: 100%;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: black;
   font-weight: bolder;
