--- a/page.css
+++ b/page.css
@@ -1,10 +1,11 @@
 body {
   background-image: url("immagini/imgprova.jpg");
-  height: 100%;
+  height: 100vh;
   width: 100%;
   position: absolute;
   display: block;
   margin: 0%;
+  overflow: auto;
 }
 
 header {
@@ -71,17 +72,17 @@ main {
   font-family: "Cracked Johnnie";
   color: black;
   font-weight: bold;
-  font-size: 43px;
-  margin-left: 20%;
+  font-size: 40px;
+  margin-left: 5%;
   margin-top: auto;
 }
 
-#data {
-  margin-left: 20%;
+#impos {
+  margin-left: 5%;
   margin-top: 2%;
   display: inline-block;
   position: absolute;
-  font-size: 40px;
+  font-size: 30px;
 }
 
 .present {
@@ -121,7 +122,7 @@ footer {
   top: 83%;
   background-color: bisque;
   width: 100%;
-  height: 17%;
+  height: auto;
   color: black;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
