--- a/page.css
+++ b/page.css
@@ -1,11 +1,13 @@
 body {
   background-image: url("immagini/imgprova.jpg");
+  background-repeat: no-repeat;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: absolute;
   display: block;
   margin: 0%;
   overflow: auto;
+  zoom: 1;
 }
 
 header {
